# MangaUpdates

./: CMakeLists.txt  Messages.sh
package/: metadata.desktop
package/contents/ui/: NewChapters.qml  UpdateElement.qml  main.qml
